#27 - ported list-fancy example, updated docs